--- a/src/pages/tasks/tasks.html
+++ b/src/pages/tasks/tasks.html
@@ -18,7 +18,7 @@
                     <ion-col class="right-col">  {{ task.duration }} mins </ion-col>
                 </ion-row>
                 <ion-row class="bottom-row">
-                    <ion-col> project </ion-col>
+                    <ion-col> {{ task.type }} </ion-col>
                     <ion-col class="right-col"> {{ task.due | date: 'EEE, MMM d h:mm a' }} </ion-col>
                 </ion-row>
             </button>
